--- a/Top Filmes/Top Filmes/Resources/User Interfaces/Storyboards/Base.lproj/Movie.storyboard
+++ b/Top Filmes/Top Filmes/Resources/User Interfaces/Storyboards/Base.lproj/Movie.storyboard
@@ -49,7 +49,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="qL3-mt-tjj"/>
+                    <navigationItem key="navigationItem" id="qL3-mt-tjj">
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="LRX-T6-tA6">
+                            <color key="tintColor" red="0.0" green="0.47843137250000001" blue="0.71764705880000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="showSearchBar:" destination="BYZ-38-t0r" id="XFl-uK-fwA"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
                     <connections>
                         <outlet property="moviesCollectionView" destination="5Wg-9t-6f0" id="wbV-yW-itS"/>
@@ -66,7 +73,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="F2s-a5-7jM" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Xgt-pi-30Z">
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="Xgt-pi-30Z">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
