--- a/Top Filmes/Top Filmes/Resources/User Interfaces/Xibs/MovieCollectionViewCell.xib
+++ b/Top Filmes/Top Filmes/Resources/User Interfaces/Xibs/MovieCollectionViewCell.xib
@@ -19,11 +19,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="132" height="214"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="APR-OS-hWD">
-                        <rect key="frame" x="0.0" y="198" width="132" height="16"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="16" id="D1V-WS-53K"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="APR-OS-hWD">
+                        <rect key="frame" x="0.0" y="180" width="132" height="34"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -32,7 +29,10 @@
                         <rect key="frame" x="56" y="97" width="20" height="20"/>
                     </activityIndicatorView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NBT-mi-Zjt">
-                        <rect key="frame" x="0.0" y="0.0" width="132" height="198"/>
+                        <rect key="frame" x="0.0" y="0.0" width="132" height="180"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="180" id="BHa-b4-6Q2"/>
+                        </constraints>
                     </imageView>
                 </subviews>
             </view>
